--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Ajay NS <ajay.ns@outlook.com>",
   "dependencies": {
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/styles": "^4.11.3",
     "@svgr/webpack": "^4.1.0",
     "gatsby": "^2.0.76",
     "gatsby-image": "^2.0.20",
