--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "version": "0.1.0",
   "author": "Ajay NS <ajay.ns@outlook.com>",
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/styles": "^4.11.3",
+    "@material-ui/utils": "^4.11.2",
     "@svgr/webpack": "^4.1.0",
     "gatsby": "^2.0.76",
     "gatsby-image": "^2.0.20",
