--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@material-ui/styles": "^4.11.3",
     "@material-ui/utils": "^4.11.2",
     "@svgr/webpack": "^4.1.0",
+    "formik": "^2.2.6",
     "gatsby": "^2.0.76",
     "gatsby-image": "^2.0.20",
     "gatsby-plugin-alias-imports": "^1.0.5",
@@ -30,9 +31,11 @@
     "react-anchor-link-smooth-scroll": "^1.0.11",
     "react-collapsible": "^2.6.0",
     "react-dom": "^16.6.3",
+    "react-google-recaptcha": "^2.1.0",
     "react-helmet": "^5.2.0",
     "react-scrollspy": "^3.3.5",
-    "styled-components": "^4.1.3"
+    "styled-components": "^4.1.3",
+    "yup": "^0.32.9"
   },
   "keywords": [
     "gatsby"
