--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@material-ui/styles": "^4.11.3",
     "@material-ui/utils": "^4.11.2",
     "@svgr/webpack": "^4.1.0",
+    "dotenv": "^8.2.0",
     "formik": "^2.2.6",
     "gatsby": "^2.0.76",
     "gatsby-image": "^2.0.20",
